webcleaner (0.39) unstable; urgency=low

  * various fixes for HTML comment and tag parsing

 -- Bastian Kleineidam <calvin@debian.org>  Wed, 29 May 2002 20:07:31 +0200

webcleaner (0.38) unstable; urgency=low

  * rewrite of the HTML parser module; libxml is not needed anymore.
  * quote attr values in XML (SF bug#555045)
  * include forgotten source files in MANIFEST.in

 -- Bastian Kleineidam <calvin@debian.org>  Wed, 29 May 2002 00:03:35 +0200

webcleaner (0.37) unstable; urgency=low

  * wc/filter/Rewriter.py: use correct rules variable in get_attrs. This
    prevents accidently deletion of comments.
  * test/filterfile.py: provide url parameter to initStateObjects
    function

 -- Bastian Kleineidam <calvin@debian.org>  Fri, 26 Apr 2002 23:02:45 +0200

webcleaner (0.36) unstable; urgency=low

  * use getheader(), not get() on HTTP header object
  * fix returned status line on errors in ClientServerMatchmaker
  * implemented Proxy Authentication; the wcheaders tool does not yet
    work with this!

 -- Bastian Kleineidam <calvin@debian.org>  Wed, 10 Apr 2002 21:47:34 +0200

webcleaner (0.35) unstable; urgency=low

  * fix BinaryCharFilter: use string.maketrans
  * webcleanerconf: dont sort rules alphabetically
  * HttpServer.py: fix Compress module by calling initStateObject before
    sending headers

 -- Bastian Kleineidam <calvin@debian.org>  Tue,  9 Apr 2002 00:11:22 +0200

webcleaner (0.34) unstable; urgency=low

  * Use FOX 1.0.0 libraries

 -- Bastian Kleineidam <calvin@debian.org>  Thu, 28 Mar 2002 01:06:37 +0100

webcleaner (0.33) unstable; urgency=low

  * Fix DOCTYPE filtering with no pubid content (added missing >)
  * Add url regular expression matchers to the filter rules Rewriter,
    Replacer and Gifimage. This allows to match rules only to specific
    urls.
  * Updated webcleanerconf GUI for the modified rules.
  * Update german translation.
  * Dont bail out if /etc/resolv.conf could not be found on DNS init.
