@@ -1,15 +1,14 @@
 # Logrotate file for WebCleaner
 
-/var/log/webcleaner/access.log {
+/var/log/webcleaner/access.log /var/log/webcleaner/error.log {
 	compress
-	daily
-	rotate 7
+	weekly
+	rotate 5
 	notifempty
-}
-
-/var/log/webcleaner/error.log {
-	compress
-	daily
-	rotate 7
-	notifempty
+        prerotate
+          /etc/init.d/webcleaner stop
+        endscript
+        postrotate
+          /etc/init.d/webcleaner start
+        endscript
 }
