@@ -19,9 +19,15 @@ tests = (
     """< a >""",
     """<>""",
     """< >""",
+    # reduce test
+    """<a b="c"><""",
+    """d>""",
     # more start tags
     """<a b=c"><a b="c">""",
     """<a b="c><a b="c">""",
+    """<a b=/c/></a><br>""",
+    """<br/>""",
+    """<a b="50%"><br>""",
     # comments
     """<!---->""",
     """<!----->""",
