@@ -1,8 +1,9 @@
 webcleaner (0.39) unstable; urgency=low
 
-  * various fixes for HTML comment and tag parsing
+  * wc/parser/: various fixes for HTML comment and tag parsing
+  * debian/logrotate: stop and start daemon on log rotating
 
- -- Bastian Kleineidam <calvin@debian.org>  Wed, 29 May 2002 20:07:31 +0200
+ -- Bastian Kleineidam <calvin@debian.org>  Sat,  1 Jun 2002 14:45:27 +0200
 
 webcleaner (0.38) unstable; urgency=low
 
